--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "mdpick",
+  "name": "mdnize",
   "version": "1.0.0",
   "description": "Pick markdown text from codes.",
   "main": "index.js",
   "bin": {
-    "mdpick" : "cli.js"
+    "mdnize" : "cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hrfm/mdpick.git"
+    "url": "git+https://github.com/hrfm/mdnize.git"
   },
   "keywords": [
     "markdown"
@@ -19,9 +19,9 @@
   "author": "hrfm <hrfm0818@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hrfm/mdpick/issues"
+    "url": "https://github.com/hrfm/mdnize/issues"
   },
-  "homepage": "https://github.com/hrfm/mdpick#readme",
+  "homepage": "https://github.com/hrfm/mdnize#readme",
   "dependencies": {
     "extend": "^3.0.1"
   }
